--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,16 @@ body {
 .container {
     margin-top: 20vh;
 }
+section h2 {
+    text-align: justify;
+}
+/* Styling the sections */
+section {
+    max-width: 600px;
+    border: 10px solid green;
+    padding: 20px;
+    margin: 20px;
+}
+ul {
+    text-align: justify;
+}
