--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: cornflowerblue;
 }
 
 header {
     max-width: 700px;
     border: 10px solid green;
     padding: 10px;
+    background-color: aquamarine;
     margin: 30px auto;
 }
 
@@ -24,11 +25,18 @@ section h2 {
 /* Styling the sections */
 section {
     max-width: 600px;
+    background-color: aquamarine;
     border: 10px solid green;
     padding: 20px;
     margin: 20px auto;
+    animation-name: appear;
+    animation-duration: 4s;
 }
 ul {
     text-align: justify;
     list-style: square;
+}
+@keyframes appear {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
