--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,17 @@ header {
     margin: 30px auto;
 }
 
+.container h1 {
+    font-size: 24px;
+}
+
 .container {
-    margin-top: 20vh;
-    font-size: 14px;
+    margin-top: 10vh;
+    font-size: 16px;
 }
 section h2 {
     text-align: justify;
-    font-size: 20;
+    font-size: 20px;
 }
 /* Styling the sections */
 section {
