--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,44 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: cornflowerblue;
+}
+
+header {
+    max-width: 700px;
+    border: 10px solid green;
+    padding: 10px;
+    background-color: aquamarine;
+    margin: 30px auto;
+}
+
+.container h1 {
+    font-size: 24px;
 }
 
 .container {
-    margin-top: 20vh;
+    margin-top: 10vh;
+    font-size: 16px;
+}
+section h2 {
+    text-align: justify;
+    font-size: 20px;
+}
+/* Styling the sections */
+section {
+    max-width: 600px;
+    background-color: aquamarine;
+    border: 10px solid green;
+    padding: 20px;
+    margin: 20px auto;
+    animation-name: appear;
+    animation-duration: 4s;
+}
+ul {
+    text-align: justify;
+    list-style: square;
+}
+@keyframes appear {
+    from {opacity: 0;}
+    to {opacity: 1;}
 }
